ansible/roles/coastline-cluster-attack/files/manifests/07-scenario.yaml
## Frontend Resources
apiVersion: v1
kind: Namespace
metadata:
  name: coastline
---
### Emydocephalus - sea snake non-venomous
### Frontend Distroless Deadend - python analysis terminal with full securitycontext applied
###
### Hydrelaps - sea snake venomous
### API Frontend with Backend Database - python json api with sqlite database
###
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-burrow-prod
  labels:
    app: data-burrow-prod
  namespace: coastline
spec:
  selector:
    matchLabels:
      app: data-burrow-prod
  replicas: 1
  template:
    metadata:
      labels:
        app: data-burrow-prod
    spec:
      containers:
      - name: emydocephalus
        image: docker.io/controlplaneoffsec/scenario-coastline-cluster-attack:emydocephalus
        ports:
        - name: http
          containerPort: 8080
        imagePullPolicy: IfNotPresent
      - name: hydrelaps
        image: docker.io/controlplaneoffsec/scenario-coastline-cluster-attack:hydrelaps
        ports:
        - name: http
          containerPort: 5000
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /host/
          name: db
      volumes:
      - hostPath:
          path: /
        name: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-burrow-dev
  labels:
    app: data-burrow-dev
  namespace: coastline
spec:
  selector:
    matchLabels:
      app: data-burrow-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: data-burrow-dev
    spec:
      shareProcessNamespace: true
      containers:
      - name: emydocephalus
        image: docker.io/controlplaneoffsec/scenario-coastline-cluster-attack:emydocephalus
        ports:
        - name: http
          containerPort: 8080
        imagePullPolicy: IfNotPresent
      - name: hydrelaps
        image: docker.io/controlplaneoffsec/scenario-coastline-cluster-attack:hydrelaps
        ports:
        - name: http
          containerPort: 5000
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /host/
          name: db
      volumes:
      - hostPath:
          path: /
        name: db
---
## JumpBox Resources
apiVersion: v1
kind: Namespace
metadata:
  name: dmz
---
apiVersion: v1
kind: Pod
metadata:
  name: jumpbox-terminal
  namespace: dmz
spec:
  serviceAccountName: sre
  containers:
  # basic container image
  - image: docker.io/controlplaneoffsec/scenario-coastline-cluster-attack:jumpbox
    command: ["sleep", "2d"]
    name: jumpbox-terminal
    securityContext:
      allowPrivilegeEscalation: false
  restartPolicy: Always
